########################################################################

ats-lang-anariats-0.1.5:

1. A character whose ascii code is greater than 127 is treated as the null
   character by the ATS lexer. So any chars can now appear in comments.

2. Some location information is reported when a match failure occurs at
   run-time.

3. [atscc] now returns a nonzero exit status to the OS if compilation does
   not finish normally.

4. various list functions (e.g., list_map_* functions) now return linear
   lists instead of nonlinear ones.

5. Some packages in SML Basis Library are implemented in [libats/smlbas]

6. A bug is fixed that was due to nonlinear constructor patterns being
   given reference arguments.

7. The constant [div_int_int_int_bool] is re-defined as the previous
   definition was wrong if the divider and the dividee are of different
   signs.

8. A bug is fixed that was duo to [as] patterns being wrongly compiled.

9. [prelude/SATS/matrix0.sats] and [prelude/DATS/matrix0.dats] are added.

########################################################################

ats-lang-anariats-0.1.4:

1. [atscc] invokes a C compiler to compile the C code generated by the ATS
   compiler [atsopt]. If the C compiler to be used is not [gcc], please set
   the environment variable [ATSCCOMP] to the name of this C compiler.

########################################################################

ats-lang-anariats-0.1.3:

1. Various bug fixes. In particular, a bug causing incorrect compilation
   of pattern matching is fixed.

2. It is now possible to generate html files for cross-referencing. The
   flag for this feature is [--posmark_xref=XREF], where XREF should be
   replaced with the name of some directory (already created) to store
   the html files to be generated.

########################################################################

ats-lang-anariats-0.1.2:

1. Linear lazy evaluation is now supported. See [prelude/DATS/file.dats]