@@ -1,7 +1,7 @@
 /*
 **
 ** The C code is generated by ATS/Anairiats
-** The compilation time is: 2009-9-13: 15h:53m
+** The compilation time is: 2009-9-13: 19h:45m
 **
 */
 
@@ -76,23 +76,23 @@ return /* (tmp0) */ ;
 
 /* static load function */
 
-static int ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload_flag = 0 ;
+static int _2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload_flag = 0 ;
 
-ats_void_type ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload () {
-if (ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload_flag) return ;
-ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload_flag = 1 ;
+ats_void_type _2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload () {
+if (_2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload_flag) return ;
+_2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload_flag = 1 ;
 return ;
 } /* staload function */
 /* dynamic load function */
 
 // (external) dynload flag declaration
 // extern int
-// ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__dynload_flag ;
+// _2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__dynload_flag ;
 
 ats_void_type
-ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__dynload () {
-// ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__dynload_flag = 1 ;
-ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload () ;
+_2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__dynload () {
+// _2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__dynload_flag = 1 ;
+_2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__staload () ;
 #ifdef _ATS_TERMINATION_CHECK
 #endif /* _ATS_TERMINATION_CHECK */
 
@@ -107,7 +107,7 @@ return ;
 int main (int argc, char *argv[]) {
 ATS_GC_INIT() ;
 mainats_prelude() ;
-ATS_2d0_2e1_2e6_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__dynload() ;
+_2usr_2local_2share_2atshome_2doc_2EXAMPLE_2INTRO_2HelloWorld_2edats__dynload() ;
 mainats((ats_int_type)argc, (ats_ptr_type)argv) ;
 return (0) ;
 } /* end of main */
